[package]
name = "conex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4.1"
base64 = "0.21.5"
regex = "1.10.2"
actix-web = "4.4.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = { version = "0.11.22", features = ["native-tls"] }

[profile.release]
opt-level = 3
lto = true
strip = true