[package]
name = "conex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
base64 = "0.22.0"
actix-web = "4.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.11.26", features = ["rustls"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
lto = true
strip = true