[package]
name = "conex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.4"
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
http = "1.3.1"
http-body-util = "0.1.3"
bytes = "1.10.1"
hyper-rustls = { version = "0.27.7", features = ["http2", "webpki-roots"] }

# Size optimization profile
[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce number of codegen units to increase optimizations
panic = "abort"       # Abort on panic (doesn't produce a backtrace)
strip = true          # Automatically strip symbols from the binary
